--- a/AFD.ipynb
+++ b/AFD.ipynb
@@ -1,103 +1,78 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ba3e85e1-8e17-4335-95c5-fccb0158b4be",
+   "metadata": {},
+   "source": [
+    "##AFD\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e102ae7e-6f12-4722-955c-db6bc813dc03",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "__Autômato Finito Derteminístico (AFD) é uma 5-tupla (Q,Σ,δ,q0,F):Autômato Finito Derteminístico (AFD) é uma 5-tupla (Q,Σ,δ,q0,F):__\n",
+    "    1. Q é um conjunto finito de estados;\n",
+    "    2. Σ é um conjunto finito chamado de alfabeto;\n",
+    "    3. δ: Q x Σ -> Q é uma função de transição;\n",
+    "    4. q0 ∈ Q é o estado inicial;\n",
+    "    5. F ⊆ Q é o conjunto de estados finais (ou de aceitação).\n",
+    "\n",
+    "   O código abaixo é a implementação de um AFD na linguagem de programação Python (v.3.8.10), uma hash table foi escolhida para armazenar a tabela com as transições do AFD, tal estrutura de dados possui uma complexidade média O(1), mesmo que seu pior caso seja O(n), no caso desta aplicação não precisamos nos preocupar com isso. assumindo a complexidade média O(1) como dito anteriormente, a hash table ou dictionary em Python é declarada na linha 5 do algoritmo em questão.\n",
+    "   Nas primeiras três linhas são capturadas respectivamente os valores do conjunto de estados, o alfabeto e a quantidade de transições, respectivamente sendo armazenados nas variáveis _estds_, _simb_alfabeto_ e _qtd_transicoes_.\n",
+    "   Entre as linhas 7 e 8 a tabela _transicoes_afd_ é parcialmente preenchida com uma chave para cada estado, já entre as linhas 10 e 14 outro _for_ loop adiciona as transições para cada estado, tais transições são inseridas pelo usuário ainda dentro do mesmo loop, como descritas no código, respectivamente se insere a _inicial_, seguida pelo _caractere_ e finalmente o _final_ ou destino.\n",
+    "   Entre as linhas 16 e 18 são preenchidas as variáveis _estd_inicial_, _estds_finais_ e _delta_ respectivamente. Em seguida temos o bloco de código responsável por reconhecer ou não uma palavra após preenchidas as características do AFD, a viriável _delta_ se trata do conjunto de palavras que será analisado, no primeiro bloco _for_ esse bloco é percorrido palavra a palavra, ainda nesse bloco a veriável _estd_atual_ recebe o valor da variável _estd_inicial_ e a variável _estd_erro_ recebe o valor 0 indicando que o AFD não se encontra em estado de erro. Compondo ainda esse bloco _for_ um novo bloco _for_ é declarado com o objetivo de percorrer cada um dos caracteres da string (palavra) sendo analisada e tal comportamento pode resultar numa complexidade máxima de _O(n)_ onde n é o tamanho de cada palavra, uma vez que a análise é feita ao se percorrer as hash tables criadas, a análise por sua vez é feita por um bloco _try_ que ao falhar dispara uma _except_ atribuindo à variável _estd_erro_ o valor 1 e acionando um _break_ forçando a saída desse bloco _for_.\n",
+    "   Por fim ainda dentro do bloco _for_ responsável por percorrer o conjunto de palavras _delta_, um bloco _if_ analisa se a variável _estd_erro_ possui valor 1 ou se a variável _estd_atual_ está presente na lista _estds_finais_, caso uma dessas condições seja verdade é impressana tela a mensagem 'N' indicando que a palavra analisada não foi aceita pelo AFD, caso as duas condições sejam falsas é impressa na tela a mensagem 'S' indicando que a palavra foi aceita pelo AFD. Tal processo é repetido para todas as palavras presentes na lista _delta_ e após sua análise completa o algoritmo é finalizado.\n",
+    "   \n",
+    "                                                                                  Aluno: Jordan Silva Oliveira."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189e4835",
-   "metadata": {},
+   "id": "cf41fae8-0450-4c12-9b77-9d537952786f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    " Algoritmo de simulação de um AFD\n",
-    " O algoritmo retornará 'S' se a palavra pertencer ao alfabeto e 'N' se não pertencer\n",
-    " Entrada:\n",
-    "     Na primeira linha, há uma lista de estados. Na segunda linha, há uma lista contendo os símbolos do\n",
-    "     alfabeto. Na terceira linha, há o número total n de transições. Para cada uma das n linhas seguintes,\n",
-    "     há uma tripla <o,c,d> onde ‘o’ é o estado de origem, ‘c’ é o caractere e ‘d’ é o estado de destino. Em\n",
-    "     seguida, há o estado inicial. Na próxima linha, há uma lista de estados finais. Por fim, há uma lista\n",
-    "     de palavras de teste a ser reconhecida. Os itens da lista serão separados por espaço em branco.\n",
-    " \n",
-    " Saída:\n",
-    "     Seu programa deve imprimir para cada palavra de teste ‘S’ se o AFD reconhece a palavra ou ‘N’\n",
-    "     caso contrário.\n",
-    "     \n",
-    "     Entrada: 1. o AFD, dado por i, F e D, e\n",
-    "              2. a palavra de entrada, dada por prox.\n",
-    "        Saı́da: sim ou não.\n",
-    "        e ← i; s ← prox();\n",
-    "        enquanto s 6 = fs faça\n",
-    "        e ← D[e, s]; s ← prox();\n",
-    "        fimenquanto;\n",
-    "        se e ∈ F então\n",
-    "        retorne sim\n",
-    "        senão\n",
-    "        retorne não\n",
-    "        fimse\n",
-    "\"\"\"\n",
-    "stds = input().split(\" \")\n",
-    "simbAlfabeto = input().split(\" \")\n",
-    "qtsTransicoes = int(input())\n",
+    "estds = input().split(\" \")\n",
+    "simb_alfabeto = input().split(\" \")\n",
+    "qtd_transicoes = int(input())\n",
     "\n",
-    "afd = {}\n",
+    "transicoes_afd = {}\n",
     "\n",
-    "for std in stds:\n",
-    "    afd[std] = {}\n",
-    "    print(afd)\n",
+    "for estd in estds:\n",
+    "    transicoes_afd[estd] = {}\n",
     "\n",
-    "for i in range(0,qtsTransicoes):\n",
-    "    i, c, f = input().split(\" \")\n",
+    "for i in range(0,qtd_transicoes):\n",
+    "    inicial, caractere, final = input().split(\" \")\n",
     "    \n",
-    "    if c not in afd[i]:\n",
-    "        afd[i][c] = f\n",
+    "    if caractere not in transicoes_afd[inicial]:\n",
+    "        transicoes_afd[inicial][caractere] = final\n",
     "        \n",
-    "ini_std = input()\n",
-    "fin_std = input().split(\" \")\n",
-    "sigma = input().split(\" \")\n",
+    "estd_inicial = input()\n",
+    "estds_finais = input().split(\" \")\n",
+    "delta = input().split(\" \")\n",
     "\n",
-    "for s in sigma:\n",
-    "    atual_std = ini_std\n",
-    "    error_std = 0\n",
+    "for palavra in delta:\n",
+    "    estd_atual = estd_inicial\n",
+    "    estd_erro = 0\n",
     "    \n",
-    "    for char in s:\n",
+    "    for letra in palavra:\n",
     "        try:\n",
-    "            atual_std = afd[atual_std][char]\n",
+    "            estd_atual = transicoes_afd[estd_atual][letra]\n",
     "        except KeyError:\n",
-    "            error_std = 1\n",
+    "            estd_erro = 1\n",
     "            break\n",
-    "    if(error_std == 1 or atual_std not in fin_std):\n",
+    "    if(estd_erro == 1 or estd_atual not in estds_finais):\n",
     "        print('N')\n",
     "    else:\n",
     "        print('S')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c55cb7fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 2\n",
-    "a b\n",
-    "4\n",
-    "1 b 1\n",
-    "1 a 2\n",
-    "2 b 2\n",
-    "2 a 1\n",
-    "1\n",
-    "1\n",
-    "a b ab aab baa\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb92b7c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0 1\n",
-    "a b\n"
    ]
   }
  ],
